testsuite/poke.pkl/struct-types-diag-15.pk
/* { dg-do compile } */

type Foo = struct { int i;
                    struct { any[] a; } s; /* { dg-error "" } */
                  };
